Modified item related stuff. Move item in/between inventories implemented. (2nd try to move item does not work, client sends weird packet, fcked up main?)