@@ -1,25 +1,25 @@
 package net.sf.jmuserver.gs.muObjects;
 
-import java.util.HashMap;
 import java.util.Map;
+import javolution.util.FastMap;
 
 public class MuInventory {
 
-    public static byte TradeWindow = (byte)0x80;
-    public static byte TradeWindowXSize = (byte)0x08;
-    public static byte TradeWindowYSize = (byte)0x04;
-    public static byte InventoryWindow = (byte)0x00;
-    public static byte InventoryWindowSize = (byte)0x08;
-    public static byte VaultWindow = (byte)0x02;
-    public static byte VaultWindowXSize = (byte)0x08;
-    public static byte VaultWindowYSize = (byte)0x10;    
-    public static byte OffsetInventoryWindow = (byte)0x0C;
-    public static byte OffsetOtherWindows = (byte) 0x00;
+    public static final int TradeWindow = (byte)0x80;
+    public static final int TradeWindowXSize = (byte)0x08;
+    public static final int TradeWindowYSize = (byte)0x04;
+    public static final int InventoryWindow = (byte)0x00;
+    public static final int InventoryWindowSize = (byte)0x08;
+    public static final int VaultWindow = (byte)0x02;
+    public static final int VaultWindowXSize = (byte)0x08;
+    public static final int VaultWindowYSize = (byte)0x10;    
+    public static final int OffsetInventoryWindow = (byte)0x0C;
+    public static final int OffsetOtherWindows = (byte) 0x00;
     
     protected byte _offset;
     protected byte _invXSize;
     protected byte _invYSize;
-    protected Map _inventory = new HashMap<Integer, MuInventoryItem>();
+    protected Map _inventory = new FastMap<Integer, MuInventoryItem>().setShared(true);
     protected boolean[][] _slots;
 
     public MuInventory() {
@@ -40,12 +40,12 @@ public class MuInventory {
                 Item.getItemStats().get_ySize());        
         int line = getLine(Position);
         int column = getColumn(Position);
-        Position += _offset;
         if (Position >= 0) {
+            Position += _offset;            
             Item.setPosition(Position);
             markSlots(line, column, Item.getItemStats().get_ySize(),
                     Item.getItemStats().get_ySize(), true);
-            _inventory.put(Position, Item);
+            _inventory.put(new Integer(Position), Item);
             return true;
         }        
         else
@@ -58,13 +58,16 @@ public class MuInventory {
      * @return boolean
      */
     public boolean storeItem(MuInventoryItem Item, int Position) {
+        Position -= _offset;
         int line = getLine(Position);
-        int column = getColumn(Position);
+        int column = getColumn(Position);      ;
         if (checkSlots(line, column, Item.getItemStats().get_xSize(),
                 Item.getItemStats().get_ySize())) {
             markSlots(line, column, Item.getItemStats().get_xSize(),
                     Item.getItemStats().get_ySize(), true);
-            _inventory.put(Item.getPosition(), Item);
+            Position += _offset;
+            Item.setPosition(Position);
+            _inventory.put(new Integer(Position), Item);
             return true;
         }        
         else
@@ -78,7 +81,7 @@ public class MuInventory {
     
     public boolean removeItem(MuInventoryItem Item) {
         if (_inventory.containsValue(Item)) {
-            markSlots(getLine(Item.getPosition()), getColumn(Item.getPosition()),
+            markSlots(getLine(Item.getPosition()-_offset), getColumn(Item.getPosition()-_offset),
                     Item.getItemStats().get_xSize(), Item.getItemStats().get_ySize(), false);
             _inventory.remove(Item.getPosition());
             return true;
@@ -88,7 +91,7 @@ public class MuInventory {
     }
     
     public MuInventoryItem getItem(int Position) {
-        return (MuInventoryItem) _inventory.get(Integer.valueOf(Position));
+        return (MuInventoryItem) _inventory.get(new Integer(Position));
     }
     
     protected boolean checkSlots(int line, int column, byte itemXSize, byte itemYSize) {
@@ -128,8 +131,10 @@ public class MuInventory {
     
     protected void markSlots(int line, int column, byte itemXSize, byte itemYSize, boolean flag) {
         for (int i=line; i<=line+itemYSize-1; i++)
-            for (int j=column; j<=column+itemXSize-1; j++)
-                _slots[i][j] = flag;
+            for (int j=column; j<=column+itemXSize-1; j++) {
+                System.out.println("marking ["+i+"]["+j+"]");
+            
+                _slots[i][j] = flag;}
     }
     
     protected int getLine(int Position) {
